improve:优化maven版本管理